--- a/adarsh.html
+++ b/adarsh.html
@@ -26,10 +26,12 @@
           <br>
           <p><b><i><u>skillset</u></i></b></p>
           <br>
-            <ul>
+            <ul> 
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>PROGRAMMING IN  C++</li>
+                 <li>js</li>
+                 <li>java </li>
+                <li>PROGRAMMING IN C++ </li>
                 <li> DSA</li>
             </ul>
 
@@ -38,7 +40,7 @@
                     <P><b><u><I>education</I></u></b></P>
          <uL>
             <li>
-            pursuing B.E. in information techgnology at <br>
+             B.E. in information techgnology at <br>
             Institute of engineering and technology DAVV
             </li>
             <li> CGPA: 7.2</li>
