--- a/adarsh.html
+++ b/adarsh.html
@@ -29,6 +29,8 @@
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>javascript</li>
+                <li>blockchain </li>
                 <li>PROGRAMMING IN  C++</li>
                 <li> DSA</li>
             </ul>
@@ -38,8 +40,8 @@
                     <P><b><u><I>education</I></u></b></P>
          <uL>
             <li>
-            pursuing B.E. in information techgnology at <br>
-            Institute of engineering and technology DAVV
+             B.E. in information techgnology at <br>
+            Institute of engineering and technology DAVV (IET DAVV)
             </li>
             <li> CGPA: 7.2</li>
          </uL>
